Update Queenstagram (Capture, Load, Rotate Image)

--- a/Queenstagram/app/src/main/AndroidManifest.xml
+++ b/Queenstagram/app/src/main/AndroidManifest.xml
@@ -2,11 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.queenstagram">
 
+    <!-- 이미지 다운로드를 위한 permission -->
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- 카메라 사용 및 사진 저장 위한 permission -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
-
     <uses-feature android:name="android.hardware.camera" />
 
     <application
@@ -24,6 +25,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- 사진 촬영을 위한 provide -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.queenstagram.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths"></meta-data>
+        </provider>
+
     </application>
 
 </manifest>
