--- a/Queenstagram/app/build.gradle
+++ b/Queenstagram/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-analytics:17.3.0'
     implementation 'com.google.firebase:firebase-firestore:21.4.2'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
 }
